# valuagent

./: .gitignore  Dockerfile  LICENSE  README.md  dockerfile  pyproject.toml
notebooks/: ocr.ipynb
src/: __init__.py  balance_sheet_index.json  config.py  main.py  profit_and_loss_index.json  prompts.py  schemas.py  server.py  utils.py
src/api/: routes.py
src/app/: main.py
src/app/api/: routes.py
src/clients/: genai_client.py
src/domain/models/: balance_sheet.py  profit_and_loss.py  rules.py
src/domain/prompts/: balance_sheet.py  profit_and_loss.py  statement_disambiguation.py
src/exporters/: excel.py
src/infrastructure/: config.py
src/infrastructure/clients/: genai_client.py
src/infrastructure/exporters/: dcf.py  excel.py
src/infrastructure/resources/: balance_sheet_index.json  predmet_oceneni_mapping.json  profit_and_loss_index.json  rozvaha_mapping.json  vysledovka_mapping.json
src/services/: process.py  quality.py
src/shared/: utils.py
